Fixed website and report build
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1236 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/pom.xml
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/pom.xml
@@ -33,7 +33,7 @@
 	<packaging>swf</packaging>
 	<name>${project.artifactId}</name>
 	<properties>
-		<moduleDir>..</moduleDir>
+		<moduleDir>../../..</moduleDir>
 	</properties>
 	<build>
 		<finalName>${project.artifactId}-${project.version}</finalName>
