--- a/org.openwms/trunk/org.openwms.core/org.openwms.core.domain/pom.xml
+++ b/org.openwms/trunk/org.openwms.core/org.openwms.core.domain/pom.xml
@@ -32,7 +32,7 @@
     <artifactId>org.openwms.core.domain</artifactId>
     <name>${project.artifactId}</name>
     <properties>
-        <moduleDir>../..</moduleDir>
+        <moduleDir>../../..</moduleDir>
     </properties>
     <build>
         <plugins>
