--- a/org.openwms/trunk/org.openwms.core/org.openwms.core.infrastructure.configuration/pom.xml
+++ b/org.openwms/trunk/org.openwms.core/org.openwms.core.infrastructure.configuration/pom.xml
@@ -33,7 +33,7 @@
     <packaging>pom</packaging>
     <name>${project.artifactId}</name>
     <properties>
-        <moduleDir>../..</moduleDir>
+        <moduleDir>../../..</moduleDir>
     </properties>
     <build>
         <plugins>
