--- a/org.openwms/trunk/org.openwms.app/org.openwms.app.par/pom.xml
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.app.par/pom.xml
@@ -33,7 +33,7 @@
     <packaging>par</packaging>
     <name>${project.artifactId}</name>
     <properties>
-        <moduleDir>..</moduleDir>
+        <moduleDir>../../..</moduleDir>
     </properties>
     <build>
         <plugins>
