--- a/org.openwms/trunk/org.openwms.app/org.openwms.app.plan/pom.xml
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.app.plan/pom.xml
@@ -33,7 +33,7 @@
     <packaging>pom</packaging>
     <name>${project.artifactId}</name>
     <properties>
-        <moduleDir>../..</moduleDir>
+        <moduleDir>../../..</moduleDir>
         <openwms.configuration.version>0.0.1-SNAPSHOT</openwms.configuration.version>
     </properties>
     <build>
