--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.wrapper/pom.xml
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.wrapper/pom.xml
@@ -33,7 +33,7 @@
     <packaging>war</packaging>
     <name>${project.artifactId}</name>
     <properties>
-        <moduleDir>../..</moduleDir>
+        <moduleDir>../../..</moduleDir>
         <packed.app>${project.groupId}.client.flex.app</packed.app>
     </properties>
     <build>
