--- a/org.openwms/trunk/org.openwms.common/org.openwms.common.flex.lib/pom.xml
+++ b/org.openwms/trunk/org.openwms.common/org.openwms.common.flex.lib/pom.xml
@@ -33,7 +33,7 @@
 	<packaging>swc</packaging>
 	<name>${project.artifactId}</name>
 	<properties>
-		<moduleDir>../..</moduleDir>
+		<moduleDir>../../..</moduleDir>
 	</properties>
 	<build>
 		<finalName>${project.artifactId}-${project.version}</finalName>
