--- a/org.openwms/trunk/org.openwms.core/org.openwms.core.infrastructure.configuration/pom.xml
+++ b/org.openwms/trunk/org.openwms.core/org.openwms.core.infrastructure.configuration/pom.xml
@@ -88,7 +88,7 @@
                         </goals>
                         <configuration>
                             <repositoryId>repo.sourceforge.net</repositoryId>
-                            <url>${distribution.repo.serverProtocol}//${distribution.repo.snapshot.serverUrl.rootPath}</url>
+                            <url>${distribution.repo.serverProtocol}://${distribution.repo.snapshot.serverUrl.rootPath}</url>
                             <groupId>org.openwms</groupId>
                             <artifactId>org.openwms.core.infrastructure.configuration</artifactId>
                             <version>${project.version}</version>
