Fixed repository URL
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1239 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.app/org.openwms.app.plan/pom.xml
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.app.plan/pom.xml
@@ -137,7 +137,7 @@
                         <configuration>
                             <repositoryId>repo.sourceforge.net</repositoryId>
                             <url>
-                                ${distribution.repo.serverProtocol}//${distribution.repo.snapshot.serverUrl.rootPath}
+                                ${distribution.repo.serverProtocol}://${distribution.repo.snapshot.serverUrl.rootPath}
                             </url>
                             <groupId>${project.groupId}</groupId>
                             <artifactId>${project.artifactId}</artifactId>
