Minor changes on doc
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1240 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/pom.xml
+++ b/org.openwms/trunk/pom.xml
@@ -80,7 +80,7 @@
         <developer>
             <id>scherrer</id>
             <name>Heiko Scherrer</name>
-            <email>scherrer@users.sourceforge.net</email>
+            <email>scherrer@openwms.org</email>
             <url>https://sourceforge.net/users/scherrer</url>
             <timezone>+1</timezone>
             <roles>
