--- a/org.openwms/trunk/pom.xml
+++ b/org.openwms/trunk/pom.xml
@@ -208,6 +208,14 @@
             </modules>
         </profile>
         <profile>
+            <id>rclient</id>
+            <modules>
+                <module>org.openwms.core/org.openwms.client.flex.lib</module>
+                <module>org.openwms.app/org.openwms.client.flex.app</module>
+                <module>org.openwms.app/org.openwms.client.flex.wrapper</module>
+            </modules>
+        </profile>
+        <profile>
             <id>cclient</id>
             <modules>
                 <module>org.openwms.common/org.openwms.common.flex.lib</module>
@@ -605,7 +613,7 @@
                             <report>asdoc-report</report>
                         </reports>
                         <configuration>
-                            <aggregate>true</aggregate>
+                            <aggregate>false</aggregate>
                             <mainTitle>OpenWMS.org ActionScript Documentation</mainTitle>
                             <windowTitle>OpenWMS.org ActionScript Documentation</windowTitle>
                             <footer>www.openwms.org</footer>
