--- a/org.openwms/trunk/org.openwms.tms/org.openwms.tms.util/pom.xml
+++ b/org.openwms/trunk/org.openwms.tms/org.openwms.tms.util/pom.xml
@@ -73,8 +73,8 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>org.openwms.common.util</artifactId>
-            <version>${common.version}</version>
+            <artifactId>org.openwms.core.util</artifactId>
+            <version>${core.version}</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
