--- a/org.openwms/trunk/org.openwms.core/org.openwms.core.service.spring/pom.xml
+++ b/org.openwms/trunk/org.openwms.core/org.openwms.core.service.spring/pom.xml
@@ -65,12 +65,6 @@
             <type>libd</type>
             <scope>provided</scope>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.osgi</groupId>
-            <artifactId>org.springframework.osgi-library</artifactId>
-            <type>libd</type>
-            <scope>provided</scope>
-        </dependency>
         <!-- Spring Security -->
         <dependency>
             <groupId>org.springframework.security</groupId>
@@ -82,7 +76,14 @@
             <artifactId>org.springframework.security.web</artifactId>
             <scope>provided</scope>
         </dependency>
-
+        <!-- OSGi Libraries -->
+        <dependency>
+            <groupId>org.osgi</groupId>
+            <artifactId>org.osgi.compendium</artifactId>
+            <version>4.1.0</version>
+            <scope>provided</scope>
+        </dependency>
+        
         <!-- JEE API -->
         <dependency>
             <groupId>javax.persistence</groupId>
