Moved to utility bundle
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1308 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.tms/org.openwms.tms.util/pom.xml
+++ b/org.openwms/trunk/org.openwms.tms/org.openwms.tms.util/pom.xml
@@ -70,5 +70,10 @@
             <artifactId>org.openwms.core.util</artifactId>
             <version>${core.version}</version>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>org.openwms.tms.domain</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
