Added app section
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1340 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.app/pom.xml
+++ b/org.openwms/trunk/org.openwms.app/pom.xml
@@ -66,6 +66,15 @@
                 <module>org.openwms.client.flex.wrapper</module>
             </modules>
         </profile>
+        <profile>
+            <id>app</id>
+            <modules>
+                <module>org.openwms.app.par</module>
+                <module>org.openwms.app.plan</module>
+                <module>org.openwms.client.flex.app</module>
+                <module>org.openwms.client.flex.wrapper</module>
+            </modules>
+        </profile>
     </profiles>
 
 	<dependencyManagement>
