--- a/org.openwms/trunk/pom.xml
+++ b/org.openwms/trunk/pom.xml
@@ -289,6 +289,43 @@
             </modules>
         </profile>
         <profile>
+            <id>test</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>cobertura-maven-plugin</artifactId>
+                        <configuration>
+                            <check>
+                                <branchRate>70</branchRate>
+                                <lineRate>75</lineRate>
+                                <haltOnFailure>false</haltOnFailure>
+                                <totalBranchRate>75</totalBranchRate>
+                                <totalLineRate>80</totalLineRate>
+                                <packageLineRate>80</packageLineRate>
+                                <packageBranchRate>65</packageBranchRate>
+                                <regexes>
+                                    <regex>
+                                        <pattern>org.openwms.*</pattern>
+                                        <branchRate>50</branchRate>
+                                        <lineRate>50</lineRate>
+                                    </regex>
+                                </regexes>
+                            </check>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>clean</goal>
+                                    <goal>check</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
             <id>release</id>
             <build>
                 <plugins>
@@ -596,36 +633,6 @@
                     <target>${maven.compile.targetLevel}</target>
                     <encoding>${project.build.sourceEncoding}</encoding>
                 </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>cobertura-maven-plugin</artifactId>
-                <configuration>
-                    <check>
-                        <branchRate>70</branchRate>
-                        <lineRate>75</lineRate>
-                        <haltOnFailure>false</haltOnFailure>
-                        <totalBranchRate>75</totalBranchRate>
-                        <totalLineRate>80</totalLineRate>
-                        <packageLineRate>80</packageLineRate>
-                        <packageBranchRate>65</packageBranchRate>
-                        <regexes>
-                            <regex>
-                                <pattern>org.openwms.*</pattern>
-                                <branchRate>50</branchRate>
-                                <lineRate>50</lineRate>
-                            </regex>
-                        </regexes>
-                    </check>
-                </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>clean</goal>
-                            <goal>check</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
