Added utility class and some javadoc and asserts
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1355 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.core/org.openwms.core.util/pom.xml
+++ b/org.openwms/trunk/org.openwms.core/org.openwms.core.util/pom.xml
@@ -53,6 +53,11 @@
     <dependencies>
         <!-- Spring Framework -->
         <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>com.springsource.org.apache.commons.lang</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>org.springframework.spring-library</artifactId>
             <type>libd</type>
