--- a/org.openwms/trunk/org.openwms.core/org.openwms.core.domain/pom.xml
+++ b/org.openwms/trunk/org.openwms.core/org.openwms.core.domain/pom.xml
@@ -66,6 +66,11 @@
         <!-- Test dependencies -->
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>org.openwms.core.util</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.core.test</artifactId>
             <type>test-jar</type>
             <scope>test</scope>
